Bug 1737305 - Don't hardcode app name when checking LegacyProfiles policy. r=mossop

Differential Revision: https://phabricator.services.mozilla.com/D129315